# content-aggregator

./: package.json  pyproject.toml
app/: database.py  mixins.py
app/models/: article.py  section.py  subscription.py  user.py
spec/api/: add_source.md  get_feed.md  subscriptions.md
